--- a/index.htm
+++ b/index.htm
@@ -6,32 +6,49 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1665872890035"></script>
-    <link rel="shortcut icon" href="favicon.ico?v=1665872890035">
-	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1665872890035">
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1665872890035">
-	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1665872890035">
-	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1665872890035">
-	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1665872890035">
-	<link rel="manifest" href="manifest.json?v=1665872890035">
+    <script src="lib/tdvplayer.js?v=1665874877897"></script>
+    <link rel="shortcut icon" href="favicon.ico?v=1665874877897">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1665874877897">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1665874877897">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1665874877897">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1665874877897">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1665874877897">
+	<link rel="manifest" href="manifest.json?v=1665874877897">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<link rel="preload" href="locale/pt.txt?v=1665872890035" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1665872890035" as="script"/>
-	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/r/2/0_0.jpg?v=1665872890035" as="image"/>
-	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/l/2/0_0.jpg?v=1665872890035" as="image"/>
-	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/u/2/0_0.jpg?v=1665872890035" as="image"/>
-	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/d/2/0_0.jpg?v=1665872890035" as="image"/>
-	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/f/2/0_0.jpg?v=1665872890035" as="image"/>
-	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/b/2/0_0.jpg?v=1665872890035" as="image"/>
+	<link rel="preload" href="locale/pt.txt?v=1665874877897" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1665874877897" as="script"/>
+	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/r/2/0_0.jpg?v=1665874877897" as="image"/>
+	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/l/2/0_0.jpg?v=1665874877897" as="image"/>
+	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/u/2/0_0.jpg?v=1665874877897" as="image"/>
+	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/d/2/0_0.jpg?v=1665874877897" as="image"/>
+	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/f/2/0_0.jpg?v=1665874877897" as="image"/>
+	<link rel="preload" href="media/panorama_B7B6A79F_BCCD_6CC1_41E6_8120593A1925_0/b/2/0_0.jpg?v=1665874877897" as="image"/>
+	<meta property="og:title" content="Colégio Batista Ensino Médio" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="Faça um Tour virtual 360 ° no colégio Batista" />
+	<meta property="og:url" content="https://cbtour360.github.io/Colegio-Batista-Ensino-Medio/index.htm" />
+	<meta property="og:image" content="https://cbtour360.github.io/Colegio-Batista-Ensino-Medio/socialThumbnail.jpg" />
+	<meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="630" />
+	<meta property="fb:app_id" content="817622095004141" />
+	<link rel="image_src" href="https://cbtour360.github.io/Colegio-Batista-Ensino-Medio/socialThumbnail.jpg?v=1665874877897">
+	<meta property="og:locale" content="pt"/>
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:title" content="Colégio Batista Ensino Médio"/>
+	<meta name="twitter:description" content="Faça um Tour virtual 360 ° no colégio Batista"/>
+	<meta name="twitter:url" content="https://cbtour360.github.io/Colegio-Batista-Ensino-Medio/index.htm"/>
+	<meta name="twitter:image:src" content="https://cbtour360.github.io/Colegio-Batista-Ensino-Medio/socialThumbnail.jpg?v=1665874877897"/>
+	<meta name="twitter:image:width" content="1200"/>
+	<meta name="twitter:image:height" content="630"/>
 	<script src="scorm.js" type="text/javascript"></script>
-	<script src="https://remote.3dvista.com/lib/tdvremote.js?v=1665872890035" type="text/javascript"></script>
+	<script src="https://remote.3dvista.com/lib/tdvremote.js?v=1665874877897" type="text/javascript"></script>
 	<meta name="description" content="Faça um Tour virtual 360 ° no colégio Batista"/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="script.js?v=1665872890035"></script>
+    <script src="script.js?v=1665874877897"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1665872890035","mobile":"script_mobile.js?v=1665872890035"};
+        var devicesUrl = {"general":"script_general.js?v=1665874877897","mobile":"script_mobile.js?v=1665874877897"};
 
         (function()
         {
@@ -74,9 +91,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1665872890035');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1665872890035');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1665872890035');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1665874877897');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1665874877897');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1665874877897');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -322,7 +339,7 @@
         #viewer { z-index:1; }
         #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,255,255,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1665872890035">
+    <link rel="stylesheet" href="fonts.css?v=1665874877897">
 </head>
 <body>
     <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_FE20BA4E_CA49_7A14_41D0_0A06E8A85EE0.png'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 14.55%; top: 18.22%; width: 70.90%; height: 33.57%"></div><div style="z-index: 5; position: absolute; left: 0%; top: 53.47%; width: 100.00%; height: 9.74%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:2.4347826086956497vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#999999;font-size:2.43vmin;">Bem vindo ao Tour Virtual 360°</SPAN></SPAN></DIV><DIV STYLE="text-align:center;font-size:2.4347826086956497vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#999999;font-size:2.43vmin;">do colégio Batista...</SPAN></SPAN></DIV></div></div></div>
